--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,10 @@
 			<label>Number 2</label>
 			<input id="input-num2" type="text" size="3" />
 		</div>
-
+		<div>
+			<label>Sum</label>
+			<span id="sum"></span>
+		</div>
 		<input type="submit" value="Calculate!" />
 	</form>
 
